refactor: rename project from async-claude-rd to free-claw

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 TELEGRAM_BOT_TOKEN=         # From @BotFather
 ALLOWED_TELEGRAM_USERS=     # Comma-separated Telegram user IDs
 WORKSPACE_DIR=~/projects    # Default workspace for Claude Code
-DATA_DIR=~/.async-claude    # Session + scheduler persistence
+DATA_DIR=~/.free-claw       # Session + scheduler persistence
 CLAUDE_MODEL=sonnet         # Default model
 ENABLE_BROWSER=true         # Enable Playwright MCP
 TIMEOUT_MS=600000           # 10 min overall timeout
