fix: make --model optional, default to CLI's own model
Stop forcing --model on every invocation. When CLAUDE_MODEL is unset
or blank, omit the flag entirely so the CLI uses its own configured
default. This avoids silent failures when the hardcoded "sonnet"
string isn't a valid model identifier for the installed CLI version.

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ TELEGRAM_BOT_TOKEN=         # From @BotFather
 ALLOWED_TELEGRAM_USERS=     # Comma-separated Telegram user IDs
 WORKSPACE_DIR=~/projects    # Default workspace for Claude Code
 DATA_DIR=~/.free-claw       # Session + scheduler persistence
-CLAUDE_MODEL=sonnet         # Default model
+CLAUDE_MODEL=               # Override CLI model (blank = use CLI default)
 ENABLE_BROWSER=true         # Enable Playwright MCP
 TIMEOUT_MS=600000           # 10 min overall timeout
 NO_OUTPUT_TIMEOUT_MS=180000 # 3 min no-output watchdog
