--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ WORKSPACE_DIR=~/projects    # Default workspace for Claude Code
 DATA_DIR=~/.free-claw       # Session + scheduler persistence
 CLAUDE_MODEL=               # Override CLI model (blank = use CLI default)
 ENABLE_BROWSER=true         # Enable Playwright MCP
+CHROME_DEBUG_PORT=9222      # Chrome remote debugging port
+CHROME_USER_DATA_DIR=~/.free-claw/chrome-profile  # Persistent Chrome profile
+CHROME_PATH=                # Auto-detected on macOS if blank
+CHROME_HEADLESS=true        # false to show the browser window
 TIMEOUT_MS=600000           # 10 min overall timeout
 NO_OUTPUT_TIMEOUT_MS=180000 # 3 min no-output watchdog
 DEFAULT_TIMEZONE=           # IANA timezone (defaults to system)
