--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "chrome": "tsx src/chrome-open.ts"
   },
   "dependencies": {
     "grammy": "^1.35.0",
