feat(browser): add tab management to prevent runaway tab accumulation
CDP-based tab trimming runs before every Claude CLI invocation, closing
excess tabs beyond a configurable limit (MAX_BROWSER_TABS, default 5).
System prompt now also guides Claude to reuse existing tabs via
browser_tabs instead of always opening new ones.

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ CHROME_DEBUG_PORT=9222      # Chrome remote debugging port
 CHROME_USER_DATA_DIR=~/.free-claw/chrome-profile  # Persistent Chrome profile
 CHROME_PATH=                # Auto-detected on macOS if blank
 CHROME_HEADLESS=true        # false to show the browser window
+MAX_BROWSER_TABS=5          # Max tabs before auto-cleanup (0 = unlimited)
 TIMEOUT_MS=600000           # 10 min overall timeout
 NO_OUTPUT_TIMEOUT_MS=180000 # 3 min no-output watchdog
 DEFAULT_TIMEZONE=           # IANA timezone (defaults to system)
