--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "typecheck": "tsc --noEmit",
+    "lint": "biome check src/",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "chrome": "tsx src/chrome-open.ts"
   },
   "dependencies": {
-    "grammy": "^1.35.0",
-    "dotenv": "^16.4.0",
+    "chrono-node": "^2.7.0",
     "croner": "^9.0.0",
-    "chrono-node": "^2.7.0"
+    "dotenv": "^16.4.0",
+    "grammy": "^1.35.0"
   },
   "devDependencies": {
-    "typescript": "^5.7.0",
+    "@biomejs/biome": "^2.4.3",
     "@types/node": "^22.0.0",
-    "tsx": "^4.19.0"
+    "tsx": "^4.19.0",
+    "typescript": "^5.7.0",
+    "vitest": "^4.0.18"
   }
 }
