feat(telegram): add image support to photo handler
Download Telegram photos locally and instruct Claude to read them via
its built-in Read tool. Extract shared deliverResult helper from text
handler to avoid duplication. Photo handler now streams responses with
an inline stop button, matching the text handler behavior.

- Add src/telegram/image.ts for downloading photos via Telegram API
- Add uploadsDir config field (defaults to WORKSPACE_DIR)
- Refactor response delivery into reusable deliverResult function

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ MAX_BROWSER_TABS=5          # Max tabs before auto-cleanup (0 = unlimited)
 TIMEOUT_MS=600000           # 10 min overall timeout
 NO_OUTPUT_TIMEOUT_MS=180000 # 3 min no-output watchdog
 DEFAULT_TIMEZONE=           # IANA timezone (defaults to system)
+UPLOADS_DIR=               # Where to save uploaded images (defaults to WORKSPACE_DIR)
