refactor(config): derive paths from workspaceDir → dataDir hierarchy
Eliminate duplicated hardcoded path literals by computing workspaceDir
and dataDir as root variables, then deriving uploadsDir and
chromeUserDataDir from dataDir. Each level remains independently
overridable via its own env var.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 TELEGRAM_BOT_TOKEN=         # From @BotFather
 ALLOWED_TELEGRAM_USERS=     # Comma-separated Telegram user IDs
 WORKSPACE_DIR=~/projects    # Default workspace for Claude Code
-DATA_DIR=~/.free-claw       # Session + scheduler persistence
+DATA_DIR=                   # Session + scheduler persistence (defaults to WORKSPACE_DIR/data)
 CLAUDE_MODEL=               # Override CLI model (blank = use CLI default)
 ENABLE_BROWSER=true         # Enable Playwright MCP
 CHROME_DEBUG_PORT=9222      # Chrome remote debugging port
-CHROME_USER_DATA_DIR=~/.free-claw/chrome-profile  # Persistent Chrome profile
+CHROME_USER_DATA_DIR=       # Persistent Chrome profile (defaults to DATA_DIR/chrome-profile)
 CHROME_PATH=                # Auto-detected on macOS if blank
 CHROME_HEADLESS=true        # false to show the browser window
 MAX_BROWSER_TABS=5          # Max tabs before auto-cleanup (0 = unlimited)
 TIMEOUT_MS=600000           # 10 min overall timeout
 NO_OUTPUT_TIMEOUT_MS=180000 # 3 min no-output watchdog
 DEFAULT_TIMEZONE=           # IANA timezone (defaults to system)
-UPLOADS_DIR=               # Where to save uploaded images (defaults to WORKSPACE_DIR)
+UPLOADS_DIR=               # Where to save uploaded images (defaults to DATA_DIR/uploads)
