feat(runner): replace --dangerously-skip-permissions with allowlist sandbox
Remove the blanket --dangerously-skip-permissions flag and replace it
with --permission-mode dontAsk plus an explicit --allowedTools allowlist.
Dangerous commands (rm, sudo, kill, etc.) are excluded by default.

- Add DEFAULT_ALLOWED_TOOLS (~55 safe tools) to claude-cli.ts
- Add buildSandboxArgs() that builds permission + allowlist + --add-dir flags
- Pass sandbox flags on every invocation including --resume
- Add config fields: permissionMode, allowedTools, extraAllowedTools,
  sandboxAdditionalDirs with env var support
- Add startup logging for permission mode and tool count
- Add 25 unit tests for sandbox arg building

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ TIMEOUT_MS=600000           # 10 min overall timeout
 NO_OUTPUT_TIMEOUT_MS=180000 # 3 min no-output watchdog
 DEFAULT_TIMEZONE=           # IANA timezone (defaults to system)
 UPLOADS_DIR=               # Where to save uploaded images (defaults to DATA_DIR/uploads)
+
+# Sandbox / Permissions
+PERMISSION_MODE=dontAsk                    # dontAsk | acceptEdits | bypassPermissions
+ALLOWED_TOOLS=                             # Override entire allowlist (comma-separated, leave empty for defaults)
+EXTRA_ALLOWED_TOOLS=                       # Add to default allowlist (e.g., Bash(rm:*),Bash(kill:*))
+SANDBOX_ADDITIONAL_DIRS=                   # Extra dirs beyond workspace (default: DATA_DIR + UPLOADS_DIR)
